build_errors.txt
install
+- install minbot
   +- compile exe minbot Debug native 2 errors
src/agent.zig:10:25: error: member function expected 1 argument(s), found 0
    std.fs.File.stdout().writer().writeAll(chunk) catch {};
    ~~~~~~~~~~~~~~~~~~~~^~~~~~~
/opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/fs/File.zig:2120:5: note: function declared here
pub fn writer(file: File, buffer: []u8) Writer {
~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    run: src/agent.zig:111:84
    runAgent: src/main.zig:63:18
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src/providers/openrouter.zig:158:42: error: no field or member function named 'read' in 'Io.Reader'
            const bytes_read = try reader.read(&read_buf);
                                   ~~~~~~^~~~~
/opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/Io/Reader.zig:1:1: note: struct declared here
const Reader = @This();
^~~~~
src/providers/openrouter.zig:158:42: note: method invocation only supports up to one level of implicit pointer dereferencing
src/providers/openrouter.zig:158:42: note: use '.*' to dereference pointer
error: the following command failed with 2 compilation errors:
/opt/homebrew/Cellar/zig/0.15.2/bin/zig build-exe -ODebug --dep minbot -Mroot=/Users/a0/w/chatbot/minbot/src/main.zig -Mminbot=/Users/a0/w/chatbot/minbot/src/root.zig --cache-dir .zig-cache --global-cache-dir /Users/a0/.cache/zig --name minbot --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.2/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
install transitive failure
+- install minbot transitive failure
   +- compile exe minbot Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache/o/c28b7bef94a5b907ec85cb1ba583de09/build /opt/homebrew/Cellar/zig/0.15.2/bin/zig /opt/homebrew/Cellar/zig/0.15.2/lib/zig /Users/a0/w/chatbot/minbot .zig-cache /Users/a0/.cache/zig --seed 0xaef3e4af -Z0a6fdde566c14e1d -p .
